force-app/main/default/objects/conference360__Event_Builder_Configuration__mdt/conference360__Event_Builder_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Event Builder Configuration</label>
    <pluralLabel>Event Builder Configurations</pluralLabel>
</CustomObject>