force-app/main/default/objects/conference360__Event_Builder_Configuration__mdt/fields/conference360__Component_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__Component_Name__c</fullName>
    <label>Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>