force-app/main/default/objects/conference360__Event_Builder_Configuration__mdt/fields/conference360__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>conference360__Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>