force-app/main/default/objects/conference360__Event_Builder_Configuration__mdt/fields/conference360__Visible__c.field-meta.xml
<CustomField>
    <fullName>conference360__Visible__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Visible</label>
    <type>Checkbox</type>
</CustomField>